--- a/vyos.yml
+++ b/vyos.yml
@@ -2,7 +2,6 @@
 - hosts: vyos
   gather_facts: false
   tasks:
-    # TODO: port forward
     - name: "Gather Config"
       vyos.vyos.vyos_facts:
         gather_subset: "config"
@@ -1839,6 +1838,46 @@
           - "set nat source rule {{ ((rule_number + 1) * 10) + 1 }} source address {{ item.ipv4_network }}"
           - "set nat source rule {{ ((rule_number + 1) * 10) + 1 }} translation address masquerade"
       loop: "{{ lan_interfaces_with_wan_access }}"
+      loop_control:
+        index_var: rule_number
+    - name: "Setup port forwarding rules"
+      vyos.vyos.vyos_config:
+        lines:
+          - "set nat destination rule {{ (rule_number + 1) * 10 }} description '{{ item.description }} ({{ ansible_managed }})'"
+          - "set nat destination rule {{ (rule_number + 1) * 10 }} destination port '{{ item.port }}'"
+          - "set nat destination rule {{ (rule_number + 1) * 10 }} inbound-interface pppoe0"
+          - "set nat destination rule {{ (rule_number + 1) * 10 }} protocol '{{ item.protocol }}'"
+          - "set nat destination rule {{ (rule_number + 1) * 10 }} translation address '{{ item.translation_address }}'"
+          - "set nat destination rule {{ ((rule_number + 1) * 10) + 1 }} description '{{ item.description }} ({{ ansible_managed }})'"
+          - "set nat destination rule {{ ((rule_number + 1) * 10) + 1 }} destination port '{{ item.port }}'"
+          - "set nat destination rule {{ ((rule_number + 1) * 10) + 1 }} inbound-interface {{ vyos__wan_cellular_interface }}"
+          - "set nat destination rule {{ ((rule_number + 1) * 10) + 1 }} protocol '{{ item.protocol }}'"
+          - "set nat destination rule {{ ((rule_number + 1) * 10) + 1 }} translation address '{{ item.translation_address }}'"
+      loop:
+        - description: "factorio-server"
+          port: "34197"
+          protocol: "udp"
+          translation_address: "10.117.0.30"
+        - description: "valheim-server"
+          port: "2456-2458"
+          protocol: "udp"
+          translation_address: "10.117.0.30"
+        - description: "unifi-gui"
+          port: "8443"
+          protocol: "tcp"
+          translation_address: "10.82.0.2"
+        - description: "unifi-inform"
+          port: "8080"
+          protocol: "tcp"
+          translation_address: "10.82.0.2"
+        - description: "unifi-ssh"
+          port: "4222"
+          protocol: "tcp"
+          translation_address: "10.82.0.2"
+        - description: "unifi-stun"
+          port: "3478"
+          protocol: "udp"
+          translation_address: "10.82.0.2"
       loop_control:
         index_var: rule_number
 
