--- a/vyos.yml
+++ b/vyos.yml
@@ -44,11 +44,9 @@
       vyos.vyos.vyos_interfaces:
         config:
           - name: "{{ vyos__lan_interface }}"
-            description: "Local Network ({{ ansible_managed }})"
+            description: "UNIFI-MAN - management vlan for Unifi devices ({{ ansible_managed }})"
             enabled: true
             vifs:
-              - vlan_id: 1
-                description: "UNIFI-MAN - management vlan for Unifi devices ({{ ansible_managed }})"
               - vlan_id: 9
                 description: "SYNC - used for router synchronization communication ({{ ansible_managed }})"
               - vlan_id: 10
@@ -91,8 +89,8 @@
       vyos.vyos.vyos_config:
         lines:
           # UNIFI-MAN
-          - "set interfaces ethernet {{ vyos__lan_interface }} vif 1 address 10.1.0.{{ vyos__host_id_ipv4 }}/24"
-          - "set interfaces ethernet {{ vyos__lan_interface }} vif 1 address fd36:3eb3:43b0:1::{{ vyos__host_id_ipv6 }}/64"
+          - "set interfaces ethernet {{ vyos__lan_interface }} address 10.1.0.{{ vyos__host_id_ipv4 }}/24"
+          - "set interfaces ethernet {{ vyos__lan_interface }} address fd36:3eb3:43b0:1::{{ vyos__host_id_ipv6 }}/64"
           # SYNC
           - "set interfaces ethernet {{ vyos__lan_interface }} vif 9 address 10.9.0.{{ vyos__host_id_ipv4 }}/24"
           # MAN
@@ -119,7 +117,7 @@
     - set_fact:
         lan_interfaces_with_wan_access:
           # UNIFI-MAN
-          - interface: "{{ vyos__lan_interface }}.1"
+          - interface: "{{ vyos__lan_interface }}"
             ipv4_network: "10.1.0.0/24"
           # MAN
           - interface: "{{ vyos__lan_interface }}.10"
@@ -179,12 +177,12 @@
         lines:
           # UNIFI-MAN
           - "set high-availability vrrp group UNIFI-MAN-v4 description '{{ ansible_managed }}'"
-          - "set high-availability vrrp group UNIFI-MAN-v4 interface {{ vyos__lan_interface }}.1"
+          - "set high-availability vrrp group UNIFI-MAN-v4 interface {{ vyos__lan_interface }}"
           - "set high-availability vrrp group UNIFI-MAN-v4 priority {{ vyos__vrrp_priority }}"
           - "set high-availability vrrp group UNIFI-MAN-v4 virtual-address 10.1.0.1/24"
           - "set high-availability vrrp group UNIFI-MAN-v4 vrid 1"
           - "set high-availability vrrp group UNIFI-MAN-v6 description '{{ ansible_managed }}'"
-          - "set high-availability vrrp group UNIFI-MAN-v6 interface {{ vyos__lan_interface }}.1"
+          - "set high-availability vrrp group UNIFI-MAN-v6 interface {{ vyos__lan_interface }}"
           - "set high-availability vrrp group UNIFI-MAN-v6 priority {{ vyos__vrrp_priority }}"
           - "set high-availability vrrp group UNIFI-MAN-v6 virtual-address fd36:3eb3:43b0:1::1/64"
           - "set high-availability vrrp group UNIFI-MAN-v6 vrid 2"
@@ -1841,7 +1839,7 @@
           - "set zone-policy zone UNIFI-MAN from SERVICE82 firewall name UNIFI-MAN-from-SERVICE82-v4"
           - "set zone-policy zone UNIFI-MAN from WAN-Cellular firewall name UNIFI-MAN-from-WAN-v4"
           - "set zone-policy zone UNIFI-MAN from WAN-CenturyLink firewall name UNIFI-MAN-from-WAN-v4"
-          - "set zone-policy zone UNIFI-MAN interface {{ vyos__lan_interface }}.1"
+          - "set zone-policy zone UNIFI-MAN interface {{ vyos__lan_interface }}"
           # WAN-Cellular Zone
           - "set zone-policy zone WAN-Cellular default-action drop"
           - "set zone-policy zone WAN-Cellular description 'Cellular WAN connection ({{ ansible_managed }})'"
@@ -2109,8 +2107,8 @@
       vyos.vyos.vyos_config:
         lines:
           # UNIFI-MAN
-          - "set service router-advert interface {{ vyos__lan_interface }}.1 link-mtu 1492"
-          - "set service router-advert interface {{ vyos__lan_interface }}.1 prefix ::/64 valid-lifetime 172800"
+          - "set service router-advert interface {{ vyos__lan_interface }} link-mtu 1492"
+          - "set service router-advert interface {{ vyos__lan_interface }} prefix ::/64 valid-lifetime 172800"
           # MAN
           - "set service router-advert interface {{ vyos__lan_interface }}.10 link-mtu 1492"
           - "set service router-advert interface {{ vyos__lan_interface }}.10 prefix ::/64 valid-lifetime 172800"
@@ -2125,7 +2123,7 @@
       vyos.vyos.vyos_config:
         lines:
           # UNIFI-MAN
-          - "set service router-advert interface {{ vyos__lan_interface }}.1 name-server {{ item }}"
+          - "set service router-advert interface {{ vyos__lan_interface }} name-server {{ item }}"
           # MAN
           - "set service router-advert interface {{ vyos__lan_interface }}.10 name-server {{ item }}"
           # HOME
